// Vitest Snapshot v1

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 1`] = `
[
  [
    "_out_/README.md",
    "# Without injections

This file does not have any injections.
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 2`] = `[]`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/prices.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md#Amsterdam",
  },
  {
    "target": "stderr",
    "text": "
  parts/code.md",
  },
  {
    "target": "stderr",
    "text": "
  done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 1`] = `
[
  [
    "fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 1`] = `
[
  [
    "_out_/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;
